--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,27 +1,136 @@
 @import "mocha.css"; 
 
+/* ==== GLOBAL OPTIONS ==== */
 * {
-    font-family: "MesloLGS Nerd Font Mono Bold";
+    border: none;
+    font-family: "CaskaydiaCove Nerd Font";
     font-size: 16px;
-    min-height: 0;
+    min-height: 10px;
     font-weight: bold;
 }
 
 window#waybar {
-    background: transparent;
-    background-color: @crust;
-    color: @overlay0;
-    transition-property: background-color;
-    transition-duration: 0.1s;
-    border-bottom: 1px solid @overlay1;
+    background-color: rgba(40, 42, 54, 0.2);
 }
 
-#window {
-    margin: 8px;
-    padding-left: 8;
-    padding-right: 8;
+/* ==== GENERAL OPTIONS FOR VISIBLE MODULES ==== */
+
+#clock,
+#cpu,
+#memory,
+#disk,
+#pulseaudio,
+#network {
+  color: @crust;
+  margin-top: 6px;
+  margin-bottom: 6px;
+  padding-left: 10px;
+  padding-right: 10px;
+  transition: none;
 }
 
+/* ==== CREATE SEPARATIONS ==== */
+#clock,
+#cpu,
+#pulseaudio {
+  margin-left: 5px;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+#clock,
+#disk,
+#network {
+  margin-right: 5px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+/* ==== Specific styles ==== */
+
+/* ==== Modules left ==== */
+#clock {
+  background: #ABE9B3;
+}
+
+#cpu {
+  background: #96CDFB;
+}
+
+#memory {
+  background: #DDB6F2;
+}
+
+#disk {
+  background: #F5C2E7;
+}
+
+/* ==== MODULES CENTER ==== */
+#workspaces {
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  margin: 6px 5px;
+  padding: 0px 6px;
+}
+
+#workspaces button {
+  color: #B5E8E0;
+  background: transparent;
+  padding: 4px 4px;
+  transition: color 0.3s ease, text-shadow 0.3s ease, transform 0.3s ease;
+}
+
+#workspaces button.occupied {
+  color: #A6E3A1;
+}
+
+#workspaces button.active {
+  color: #89B4FA;
+  text-shadow: 0 0 4px #ABE9B3;
+}
+
+#workspaces button:hover {
+  color: #89B4FA;
+}
+
+#workspaces button.active:hover {}
+
+/* ==== MODULES RIGHT ==== */
+#taskbar {
+  background: transparent;
+  border-radius: 10px;
+  padding: 0px 5px;
+  margin: 6px 5px;
+}
+
+#taskbar button {
+  padding: 0px 5px;
+  margin: 0px 3px;
+  border-radius: 6px;
+  transition: background 0.3s ease;
+}
+
+#taskbar button.active {
+  background: rgba(34, 36, 54, 0.5);
+}
+
+#taskbar button:hover {
+  background: rgba(34, 36, 54, 0.5);
+}
+
+#pulseaudio {
+  min-width: 55px;
+  color: #1A1826;
+  background: #F5E0DC;
+}
+
+#network {
+  background: #CBA6F7;
+  padding-right: 13px;
+}
+
+
+/*
 button {
     box-shadow: inset 0 -3px transparent;
     border: none;
@@ -107,14 +216,17 @@ button:hover {
 #battery {
     color: @green;
     border-bottom: 2px solid @green;
-}
+} */
 
 /* If workspaces is the leftmost module, omit left margin */
+/*
 .modules-left>widget:first-child>#workspaces {
     margin-left: 0;
 }
+*/
 
 /* If workspaces is the rightmost module, omit right margin */
+/*
 .modules-right>widget:last-child>#workspaces {
     margin-right: 0;
 }
@@ -125,3 +237,4 @@ button:hover {
     padding-left: 6px;
     padding-right: 6px;
 }
+*/
